--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
-# Dependencies
+# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+
+# dependencies
 node_modules/
 
 # Expo
 .expo/
 dist/
 web-build/
+expo-env.d.ts
 
-# Native builds
+# Native
+.kotlin/
 *.orig.*
 *.jks
 *.p8
@@ -17,7 +21,7 @@ web-build/
 # Metro
 .metro-health-check*
 
-# Debug
+# debug
 npm-debug.*
 yarn-debug.*
 yarn-error.*
@@ -26,18 +30,25 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# Local env files
-.env
+# local env files
 .env*.local
 
-# TypeScript
+# typescript
 *.tsbuildinfo
 
-# Testing
-coverage/
+# generated native folders
+/ios
+/android
+
+# Confidential docs
+*.pdf
+
+# Windows
+*.Identifier
 
 # IDE
 .idea/
 .vscode/
-*.Identifier
-*.pdf
+
+# Environment
+.env
