--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@rnmapbox/maps": "^10.2.10",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.30",
     "expo-status-bar": "~3.0.9",
