Fix Mapbox config, add download token to env example

--- a/app.json
+++ b/app.json
@@ -34,12 +34,7 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      [
-        "@rnmapbox/maps",
-        {
-          "RNMapboxMapsDownloadToken": "sk.placeholder"
-        }
-      ]
+      "@rnmapbox/maps"
     ]
   }
 }
