--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jidou-navi",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,10 +13,18 @@
     "@rnmapbox/maps": "^10.2.10",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.30",
+    "expo-constants": "~18.0.12",
     "expo-dev-client": "^6.0.20",
+    "expo-linking": "~8.0.11",
+    "expo-location": "~19.0.8",
+    "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
