feat: add bottom tab navigation with Map and Profile screens
- Set up expo-router with file-based routing
- Add bottom tabs (Map, Profile)
- Add FAB button for adding machines
- Create placeholder screens

Closes #1

--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "@rnmapbox/maps"
+      "@rnmapbox/maps",
+      "expo-router"
     ]
   }
 }
