--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rnmapbox/maps": "^10.2.10",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.30",
+    "expo-dev-client": "^6.0.20",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5"
