--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
       }
     },
     "android": {
+      "package": "com.jidounavi.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
