visual polish and preparing to feed db with launch data

--- a/app.json
+++ b/app.json
@@ -42,7 +42,8 @@
     "plugins": [
       "@rnmapbox/maps",
       "expo-router",
-      "expo-image-picker"
+      "expo-image-picker",
+      "expo-font"
     ],
     "extra": {
       "router": {},
