--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
+    "@expo-google-fonts/press-start-2p": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@rnmapbox/maps": "^10.2.10",
@@ -16,6 +18,7 @@
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "^6.0.20",
+    "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
