Start set-up of Spanish UI localization and translation

--- a/app.json
+++ b/app.json
@@ -43,7 +43,8 @@
       "@rnmapbox/maps",
       "expo-router",
       "expo-image-picker",
-      "expo-font"
+      "expo-font",
+      "expo-localization"
     ],
     "extra": {
       "router": {},
