--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
         "NSLocationWhenInUseUsageDescription": "JidouNavi needs your location to show nearby vending machines.",
         "NSCameraUsageDescription": "JidouNavi needs camera access to take photos of vending machines.",
         "NSPhotoLibraryUsageDescription": "JidouNavi needs photo library access to select vending machine photos."
-      }
+      },
+      "bundleIdentifier": "com.jidounavi.app"
     },
     "android": {
       "package": "com.jidounavi.app",
@@ -30,10 +31,11 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "permissions": [
-        "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION",
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE"
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO"
       ]
     },
     "web": {
