--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "^6.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
     "expo-localization": "~17.0.8",
     "expo-location": "~19.0.8",
     "expo-router": "~6.0.21",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "i18next": "^25.7.4",
@@ -34,6 +36,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-view-shot": "4.0.3",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
