--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "seed": "npx tsx scripts/seed-machines.ts"
   },
   "dependencies": {
+    "@expo-google-fonts/dotgothic16": "^0.4.1",
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo-google-fonts/press-start-2p": "^0.4.1",
+    "@expo-google-fonts/silkscreen": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@rnmapbox/maps": "^10.2.10",
