--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-router": "~6.0.21",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-store-review": "~9.0.9",
     "expo-system-ui": "~6.0.9",
     "i18next": "^25.7.4",
     "react": "19.1.0",
