--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 EXPO_PUBLIC_MAPBOX_TOKEN=your-mapbox-public-token
 RNMAPBOX_MAPS_DOWNLOAD_TOKEN=your-mapbox-secret-token
+# Required for DB backups
+DATABASE_URL=postgres://postgres:[password]@db.project-ref.supabase.co:5432/postgres
