--- a/app.json
+++ b/app.json
@@ -46,7 +46,8 @@
       "expo-router",
       "expo-image-picker",
       "expo-font",
-      "expo-localization"
+      "expo-localization",
+      "expo-secure-store"
     ],
     "extra": {
       "router": {},
