feat: add Sentry crash reporting
- Install @sentry/react-native for production crash monitoring
- Initialize Sentry at app startup (disabled in dev mode)
- Report ErrorBoundary exceptions to Sentry dashboard
- Add EXPO_PUBLIC_SENTRY_DSN to .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 EXPO_PUBLIC_MAPBOX_TOKEN=your-mapbox-public-token
 RNMAPBOX_MAPS_DOWNLOAD_TOKEN=your-mapbox-secret-token
+# Sentry crash reporting (get DSN from sentry.io)
+EXPO_PUBLIC_SENTRY_DSN=https://your-key@sentry.io/your-project-id
 # Required for DB backups
 DATABASE_URL=postgres://postgres:[password]@db.project-ref.supabase.co:5432/postgres
