--- a/app.json
+++ b/app.json
@@ -47,7 +47,8 @@
       "expo-image-picker",
       "expo-font",
       "expo-localization",
-      "expo-secure-store"
+      "expo-secure-store",
+      "@sentry/react-native"
     ],
     "extra": {
       "router": {},
