--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sentry/react-native": "~7.2.0",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.32",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "^6.0.20",
     "expo-file-system": "~19.0.21",
