--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/press-start-2p": "^0.4.1",
     "@expo-google-fonts/silkscreen": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
+    "@lodev09/react-native-exify": "^0.2.7",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@rnmapbox/maps": "^10.2.10",
     "@sentry/react-native": "~7.2.0",
