--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-view-shot": "4.0.3",
     "zustand": "^5.0.9"
   },
