--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "^6.0.20",
+    "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
     "expo-localization": "~17.0.8",
     "expo-location": "~19.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
