--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rnmapbox/maps": "^10.2.10",
     "@sentry/react-native": "~7.2.0",
     "@supabase/supabase-js": "^2.89.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.32",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
